Add a coverage alias.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [aliases]
 publish = register sdist bdist_egg bdist_wininst upload
 docs = build_sphinx
+coverage = nosetests --with-coverage --cover-package=cli
 
 [build_sphinx]
 source-dir = docs
