--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [aliases]
-publish = register sdist bdist_egg bdist_wininst upload
+publish = register sdist bdist_egg  upload
 docs = build_sphinx
 coverage = nosetests --with-coverage --cover-package=cli
 
