Enable doctest in nose.
This means we have to pass something to runapp, too.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py24,py25,py26
 
 [testenv]
 deps = nose
-commands = nosetests []
+commands = nosetests --with-doctest []
 
 [testenv:docs]
 basepython=python
