tox: Tweak docs config.

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = py24,py25,py26
+envlist = py24,py25,py26,docs
 
 [testenv]
 deps = nose
 commands = nosetests --with-doctest []
 
 [testenv:docs]
-basepython=python
-changedir=doc
-deps=sphinx
-commands=
-    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
+basepython = python
+changedir = docs
+deps = sphinx
+commands = 
+	sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
