--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = py24,py25,py26,docs
+envlist = py24,py25,py26,py30,py31,docs
 
 [testenv]
 deps = nose
 commands = nosetests --with-doctest []
 
 [testenv:docs]
-basepython = python
 changedir = docs
 deps = sphinx
 commands = 
