tox: Make sure nose3/coverage get installed on py3k.

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,22 @@
 envlist = py24,py25,py26,py30,py31,docs
 
 [testenv]
-deps = nose
-commands = nosetests --with-doctest []
+deps = 
+    nose
+    coverage
+commands = nosetests --with-coverage --with-doctest []
+
+[testenv:py30]
+deps = 
+    http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
+    coverage
+commands = nosetests3 --with-coverage --with-doctest []
+
+[testenv:py31]
+deps =
+    http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
+    coverage
+commands = nosetests3 --with-coverage --with-doctest []
 
 [testenv:docs]
 changedir = docs
