--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,11 @@
 [tox]
-envlist = py24,py25,py26,py30,py31,docs
+envlist = py24,py25,py26,py31,docs
 
 [testenv]
 deps = 
     nose
     coverage
 commands = nosetests --with-coverage --with-doctest []
-
-[testenv:py30]
-deps = 
-    http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
-    coverage
-commands = nosetests3 --with-coverage --with-doctest []
 
 [testenv:py31]
 deps =
