tox: Force nose to use the cli.tests package.
Since nose searches the working directory for tests, too, it's important
to add the 'changedir' bit here as well. These changes ensure that only installed
(and, optionally, automatically refactored by 2to3) files are tested. Hopefully
means that py3k tests will run on 2to3'd files.

--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,14 @@ envlist = py24,py25,py26,py31,docs
 deps = 
     nose
     coverage
-commands = nosetests --with-coverage --with-doctest []
+changedir = {envdir}
+commands = nosetests --with-coverage --with-doctest cli []
 
 [testenv:py31]
 deps =
     http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
     coverage
-commands = nosetests3 --with-coverage --with-doctest []
+commands = nosetests3 --with-coverage --with-doctest cli []
 
 [testenv:docs]
 changedir = docs
