--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands = nosetests --with-coverage --with-doctest cli []
 deps =
     http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
     coverage
-commands = nosetests3 --with-coverage --with-doctest cli []
+commands = nosetests3 --with-coverage --with-doctest --exe cli []
 
 [testenv:docs]
 changedir = docs
