--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,13 @@ deps =
     nose
     coverage
 changedir = {envdir}
-commands = nosetests --with-coverage --with-doctest cli []
+commands = nosetests --with-doctest cli []
 
 [testenv:py31]
 deps =
     http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
     coverage
-commands = nosetests3 --with-coverage --with-doctest --exe cli []
+commands = nosetests3 --with-doctest --exe cli []
 
 [testenv:docs]
 changedir = docs
