tox: Don't run coverage in tox.

--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,13 @@ envlist = py24,py25,py26,py31,docs
 [testenv]
 deps = 
     nose
-    coverage
 changedir = {envdir}
-commands = nosetests --with-doctest --cover-package=cli cli []
+commands = nosetests --with-doctest cli []
 
 [testenv:py31]
 deps =
     http://bitbucket.org/jpellerin/nose3/get/tip.tar.gz
-    coverage
-commands = nosetests3 --with-doctest --cover-package=cli --exe cli []
+commands = nosetests3 --with-doctest --exe cli []
 
 [testenv:docs]
 changedir = docs
