Add a release alias.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 publish = register sdist bdist_egg  upload
 docs = build_sphinx
 coverage = nosetests --with-coverage --cover-package=cli
+release = register sdist upload build_sphinx upload_docs --upload-dir docs/_build/html/
 
 [build_sphinx]
 source-dir = docs
